Bug 143848 - Table boundaries keeps lines black (when set to Automatic) when document background is set to black
Summary: Table boundaries keeps lines black (when set to Automatic) when document back...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0 all versions
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Writer-Tables-Enhancements Options-Dialog-Colours Automatic-Color
  Show dependency treegraph
 
Reported: 2021-08-13 03:42 UTC by Jacob Wiese
Modified: 2024-08-20 09:37 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jacob Wiese 2021-08-13 03:42:57 UTC
Description:
Auto table boundaries keeps lines black when document background set to black.

Steps to Reproduce:
1. In Options > "Application Colors" set document background to black and table boundaries to automatic.

Actual Results:
Table border lines are black.

Expected Results:
Table border lines should be white.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 6;
OS: Windows 10.0 Build 19043;
UI render: Skia/Vulkan;
VCL: win
Locale: en-US (en_US);
UI: en-US
Calc: CL
Comment 1 Nina_Shtygailo 2021-08-13 07:49:49 UTC
confirm in

Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (ru_RU); UI: en-US
Calc: CL
Comment 2 BogdanB 2023-05-13 04:28:38 UTC
Also in
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: b5a22fceed57f05eb43a5fb0817afbc141610c5e
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 Stéphane Guillou (stragu) 2023-10-19 14:58:08 UTC
*** Bug 148675 has been marked as a duplicate of this bug. ***
Comment 4 Stéphane Guillou (stragu) 2023-10-19 15:02:42 UTC
Also true for the "Dark" application colour theme introduced in LO 7.2 for bug 141986. See duplicate bug 148675. 

In my opinion, should use the same colour "Gray" as Text Boundaries, Object Boundaries, and Grid.
Comment 5 BogdanB 2023-10-21 10:46:07 UTC
In 7.1 all versions it's the same problem, so, it's seems the problem is older.
Comment 6 Commit Notification 2024-08-20 09:37:20 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64ae1fd48ad7c8c672b78622a4f43b52e3e7f307

Resolves tdf#143848 - Adjust boundary color for dark mode

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.