Resolves tdf#143848 - Adjust boundary color for dark mode

TABLEBOUNDARIES and WRITERSECTIONBOUNDARIES now visible on dark backgrounds

Change-Id: I25bad39e503665cef486f197bbeaa34374f22c5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172096
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>